--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,6 +147,7 @@
     "githubIssues.createIssueTriggers": [
         "TODO",
     ],
+    "githubIssues.issueCompletions.enabled": true,
 
 
     "better-comments.tags": [
