vulkan triangle works no errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -232,6 +232,7 @@
         "optional": "cpp",
         "string": "cpp",
         "vector": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "xhash": "cpp"
     }
 }
