fps (~6500, windowed, triangle)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -233,6 +233,9 @@
         "string": "cpp",
         "vector": "cpp",
         "xtree": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "variant": "cpp"
     }
 }
