aligned storage overflow fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -245,6 +245,7 @@
         "xlocbuf": "cpp",
         "xlocmes": "cpp",
         "xlocmon": "cpp",
-        "xloctime": "cpp"
+        "xloctime": "cpp",
+        "bitset": "cpp"
     }
 }
