--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -246,6 +246,7 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "charconv": "cpp"
     }
 }
