--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,253 +1,64 @@
 {
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-    "explorer.confirmDelete": false,
-    "window.zoomLevel": 0,
-    "telemetry.enableTelemetry": false,
-    "telemetry.enableCrashReporter": false,
-    "debug.onTaskErrors": "showErrors",
-
-    "workbench.colorCustomizations": {
-        "editor.background": "#313335",
-        "panel.background": "#313235",
-        "editorLineNumber.foreground": "#444",
-        "editorLineNumber.activeForeground": "#0F0",
-        "editor.lineHighlightBorder": "#313235",
-        "sideBar.background": "#000",
-        "symbolIcon.enumeratorForeground": "#ff0000"
-    },
-
-    "editor.renderIndentGuides": false,
-    "editor.renderLineHighlight": "gutter",
-
-    "editor.tokenColorCustomizations": {
-        "textMateRules": [
-
-            {
-                "scope":[
-                    "constant.numeric",
-                    "string",
-                    "variable.other.enummember",
-                    "entity.name.function.preprocessor",
-                ],
-                "settings": {
-                    "foreground": "#d887cd",
-                }
-            },
-            {
-                "scope":[
-                    "punctuation.definition.string.begin",
-                    "punctuation.definition.string.end",
-                ],
-                "settings": {
-                    "foreground": "#b386ad",
-                }
-            },
-
-
-            //?DEFAULT TEXT
-            {
-                "scope":[
-                    "variable.other.enummember",
-                    "entity.name"
-                ],
-                "settings": {
-                    "foreground": "#f0ebe4",
-                    "fontStyle": "bold"
-                }
-            },
-            {
-                "scope":[
-                    "variable.parameter",
-                ],
-                "settings": {
-                    "foreground": "#f0ebe4",
-                    "fontStyle": "italic bold"
-                }
-            },
-            {
-                "scope":[
-                    "keyword",
-                    "entity.name.namespace",
-                    ],
-                "settings": {
-                    "foreground": "#d1ab9a",
-                }
-            },
-            {
-                "scope":[
-                    "punctuation",
-                    "punctuation.terminator"
-                    ],
-                "settings": {
-                    "foreground": "#9b8f89",
-                }
-            },
-            {
-                "scope":[
-                    "keyword.operator.assignment",
-                    "keyword.operator.logical"
-                    ],
-                "settings": {
-                    "foreground": "#d85959",
-                }
-            },
-
-            {
-                "scope":[
-                    "storage",
-                    "storage.modifier",
-                    "storage.type",
-                    
-                ],
-                "settings": {
-                    "foreground": "#d1ab9a",
-                    "fontStyle": "italic"
-                }
-            },
-            
-
-
-            {
-                "scope":[
-                    "entity.name.type",
-                    "punctuation.definition.template-expression.begin",
-                    "punctuation.definition.template-expression.end",
-                    "entity.other.attribute-name"
-                    
-                ],
-                "settings": {
-                    "foreground": "#f7d98d",
-                    "fontStyle": "bold"
-                }
-            },
-            {
-                "scope":[
-                    "entity.name.function",
-                    "entity.name.method",
-                ],
-                "settings": {
-                    "foreground": "#89b2ff",
-                    "fontStyle": "bold"
-                }
-            },
-
-            //COMMENT
-            {
-                "scope":[
-                    "comment.line",
-                    "comment.block.documentation",
-                    "comment.block",
-                    "comment"
-                ],
-                "settings": {
-                    "foreground": "#7fad59",
-                }
-            },
-
-        ]
-    },
-
-
-
-
-
-
-
-    "better-comments.tags": [
-        {
-            "tag": "!",
-            "color": "#FF2D00",
-            "strikethrough": false,
-            "backgroundColor": "transparent"
-        },
-        {
-            "tag": "?",
-            "color": "#3498DB",
-            "strikethrough": false,
-            "backgroundColor": "transparent",
-        },
-        {
-            "tag": "*",
-            "color": "#98C379",
-            "strikethrough": false,
-            "backgroundColor": "transparent"
-        },
-        {
-            "tag": "todo",
-            "color": "#FF8C00",
-            "strikethrough": false,
-            "backgroundColor": "transparent"
-        },
-    ],
-    "git.decorations.enabled": false,
-    "scm.diffDecorationsGutterVisibility": "hover",
-    "scm.diffDecorationsGutterWidth": 5,
-    "editor.minimap.maxColumn": 50,
-    "editor.minimap.enabled": false,
-    "scm.diffDecorations": "gutter",
-    "files.associations": {
-        "xmemory": "cpp",
-        "chrono": "cpp",
-        "cmath": "cpp",
-        "concepts": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "cwchar": "cpp",
-        "exception": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "ios": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "iterator": "cpp",
-        "limits": "cpp",
-        "memory": "cpp",
-        "new": "cpp",
-        "numeric": "cpp",
-        "ostream": "cpp",
-        "ratio": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "utility": "cpp",
-        "xfacet": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocinfo": "cpp",
-        "xlocnum": "cpp",
-        "xstddef": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xutility": "cpp",
-        "algorithm": "cpp",
-        "array": "cpp",
-        "cctype": "cpp",
-        "map": "cpp",
-        "optional": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
-        "xtree": "cpp",
-        "xhash": "cpp",
-        "list": "cpp",
-        "unordered_map": "cpp",
-        "variant": "cpp",
-        "*.rh": "cpp",
-        "ctime": "cpp",
-        "filesystem": "cpp",
-        "iomanip": "cpp",
-        "locale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xloctime": "cpp",
-        "bitset": "cpp",
-        "charconv": "cpp"
-    }
+	"telemetry.enableTelemetry": false,
+	"telemetry.enableCrashReporter": false,
+	// Code settings
+	"editor.fontFamily": "Cousine", //"SF Mono",
+	"editor.fontSize": 12,
+	"editor.fontWeight": "100",
+	"editor.fontLigatures": true,
+	"editor.lineHeight": 21,
+	"editor.tabSize": 1,
+	"editor.lineNumbers": "on",
+	"editor.renderIndentGuides": false,
+	"editor.renderWhitespace": "none",
+	"breadcrumbs.enabled": false,
+	"editor.renderControlCharacters": false,
+	"editor.minimap.enabled": false,
+	// Mouse related settings
+	"editor.smoothScrolling": true,
+	"editor.mouseWheelScrollSensitivity": 2,
+	"editor.scrollBeyondLastLine": true,
+	"editor.cursorStyle": "block",
+	"editor.cursorBlinking": "phase",
+	"editor.cursorSmoothCaretAnimation": true,
+	"editor.cursorWidth": 1,
+	// Explorer settings
+	"explorer.openEditors.visible": 0,
+	"explorer.confirmDelete": false,
+	"explorer.decorations.badges": false,
+	"problems.decorations.enabled": false,
+	"workbench.sideBar.location": "left",
+	// UI Settings
+	"window.zoomLevel": 0,
+	"window.menuBarVisibility": "toggle",
+	"workbench.statusBar.visible": false,
+	"workbench.activityBar.visible": true,
+	// Terminal
+	"terminal.integrated.fontFamily": "Consolas",
+	"terminal.integrated.fontSize": 12,
+	"terminal.integrated.lineHeight": 0,
+	"terminal.integrated.cursorStyle": "block",
+	"terminal.integrated.cursorBlinking": true,
+	"terminal.integrated.fontWeight": "100",
+	"code-runner.runInTerminal": true,
+	"editor.formatOnSave": true,
+	"workbench.startupEditor": "none",
+	"editor.detectIndentation": true,
+	"editor.insertSpaces": true,
+	"terminal.integrated.rendererType": "dom",
+	"files.autoSave": "onWindowChange",
+	// VS Colors
+	"workbench.colorCustomizations": {
+		"scrollbar.shadow": "#00000000",
+		//"editor.background": "#313335",
+		//"panel.background": "#313235",
+		"editorLineNumber.foreground": "#444444",
+		"editorLineNumber.activeForeground": "#0F0",
+		"editor.lineHighlightBorder": "#313235",
+		//"sideBar.background": "#000",
+	},
+	"editor.renderLineHighlight": "gutter",
+	"scm.diffDecorationsGutterVisibility": "hover",
+	"git.decorations.enabled": false,
+	"scm.diffDecorations": "none"
 }
