lookAt seems to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -215,6 +215,8 @@
 		"xstring": "cpp",
 		"xtr1common": "cpp",
 		"xtree": "cpp",
-		"*.rh": "cpp"
+		"*.rh": "cpp",
+		"functional": "cpp",
+		"xhash": "cpp"
 	}
 }
